--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Username"
+        android:text="Email"
         android:fontFamily="casual"
         tools:style="@style/Widget.AppCompat.EditText"
         tools:fontFamily="sans-serif">
@@ -32,7 +32,7 @@
     <EditText
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:id="@+id/txtUsername"
+        android:id="@+id/txtEmail"
         android:theme="@style/textBox"
         tools:style="@style/Widget.AppCompat.EditText">
     </EditText>
