--- a/app/src/main/res/drawable/button.xml
+++ b/app/src/main/res/drawable/button.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" >
+    <item android:state_pressed="true" android:color="#fff" >
         <shape android:shape="rectangle"  >
             <corners android:radius="50dip" />
-            <stroke android:width="1dip" android:color="#f1c40f" />
+            <stroke android:width="1dip" android:color="#ff4e50" />
             <gradient android:angle="-90" android:startColor="#fff" android:endColor="#fff"  />
         </shape>
 
@@ -12,14 +12,14 @@
         <shape android:shape="rectangle"  >
             <corners android:radius="50dip" />
             <stroke android:width="1dip" android:color="#fff" />
-            <gradient android:angle="-90" android:startColor="#f1c40f" android:endColor="#f1c40f"  />
+            <gradient android:angle="-90" android:startColor="#ff4e50" android:endColor="#ff4e50"  />
         </shape>
     </item>
     <item >
-        <shape android:shape="rectangle"  >
+        <shape android:shape="rectangle" android:color="#fff" >
             <corners android:radius="50dip" />
-            <stroke android:width="1dip" android:color="#000" />
-            <gradient android:angle="-90" android:startColor="#fff" android:endColor="#fff"  />
+            <stroke android:width="1dip" android:color="#ff4e50" />
+            <gradient android:angle="-90" android:startColor="#ff4e50" android:endColor="#ff4e50"  />
         </shape>
     </item>
 </selector>
