--- a/app/src/main/res/layout/activity_super_main.xml
+++ b/app/src/main/res/layout/activity_super_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/activity_super_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="16dp"
 
     android:orientation="vertical"
     tools:context="id.ac.umn.phocabulary_uts.SuperMainActivity">
