--- a/app/src/main/res/layout/fragment_grid_view.xml
+++ b/app/src/main/res/layout/fragment_grid_view.xml
@@ -4,26 +4,17 @@
     android:layout_height="match_parent"
     tools:context="id.ac.umn.phocabulary_uts.GridViewFragment">
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
-
-    <SearchView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-
-    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/gridview"
+    <GridView
+        android:id="@+id/gridView"
         android:layout_width="fill_parent"
-        android:layout_height="430dp"
-        android:columnWidth="150dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:columnWidth="100dp"
+        android:drawSelectorOnTop="true"
+        android:gravity="center"
         android:numColumns="auto_fit"
-        android:verticalSpacing="10dp"
-        android:horizontalSpacing="5dp"
         android:stretchMode="columnWidth"
-        android:gravity="center"/>
-
-</LinearLayout>
+        android:verticalSpacing="5dp"
+        android:focusable="true"
+        android:clickable="true"/>
 </FrameLayout>
