--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -74,13 +74,18 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Edit"
-                android:id="@+id/btnEdit"/>
+                android:id="@+id/btnEdit"
+                android:background="@drawable/button"
+                android:paddingRight="26dp"/>
+
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Save"
-                android:id="@+id/btnSave"/>
+                android:id="@+id/btnSave"
+                android:background="@drawable/button"
+                android:paddingLeft="16dp"/>
 
         </TableRow>
     </TableLayout>
