--- a/app/src/main/res/drawable/text_button.xml
+++ b/app/src/main/res/drawable/text_button.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item  android:state_enabled="true" android:state_pressed="false" android:color="#fff"></item>
+    <item  android:state_enabled="true" android:state_pressed="false" android:color="#ffffff"></item>
     <item  android:state_enabled="false" android:color="#f9d423" ></item>
-    <item  android:state_enabled="true" android:state_pressed="true" ></item>
+    <item  android:state_enabled="true" android:state_pressed="true" android:color="#ff4e50"></item>
 </selector>
