--- a/app/src/main/res/layout/activity_super_main.xml
+++ b/app/src/main/res/layout/activity_super_main.xml
@@ -5,15 +5,15 @@
     android:id="@+id/activity_super_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-
     android:orientation="vertical"
+    android:screenOrientation="portrait"
+
     tools:context="id.ac.umn.phocabulary_uts.SuperMainActivity">
 
     <FrameLayout
         android:id="@+id/flContainer"
         android:layout_width="match_parent"
-        android:layout_height="520dp">
+        android:layout_height="500dp">
 
 
     </FrameLayout>
@@ -26,7 +26,6 @@
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         android:layout_alignParentBottom="true"
         app:menu="@menu/menu_bottom_navigation" />
 
