--- a/app/src/main/res/layout/fragment_bottom_navigation.xml
+++ b/app/src/main/res/layout/fragment_bottom_navigation.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:design="http://schemas.android.com/tools">
 
     <!-- Content Container -->
 
@@ -11,7 +12,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom"
         app:itemBackground="@color/colorPrimary"
-        app:menu="@menu/menu" />
+        style="@style/bottomNav"
+        design:menu="@menu/menu_bottom_navigation"
+        android:padding="20dp"/>
 
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
