--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -17,48 +17,37 @@
         android:paddingTop="@dimen/activity_vertical_margin"
         android:orientation="vertical"
       >
-        <TableRow>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Name"
-                android:layout_weight="2"/>
-        </TableRow>
+
         <TableRow>
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/nameTxt"
-                android:layout_weight="2"/>
+                android:layout_weight="2"
+                android:drawableLeft="@drawable/fullname"
+                android:drawablePadding="20dp"/>
         </TableRow>
-        <TableRow>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Email"
-                android:layout_weight="2"/>
-        </TableRow>
+
         <TableRow>
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/emailTxt"
-                android:layout_weight="2"/>
+                android:layout_weight="2"
+                android:drawableLeft="@drawable/email_50"
+                android:drawablePadding="20dp"/>
         </TableRow>
-        <TableRow>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Password"
-                android:layout_weight="2"/>
-        </TableRow>
+
         <TableRow>
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/passwordTxt"
                 android:inputType="textPassword"
-                android:layout_weight="2"/>
+                android:layout_weight="2"
+                android:drawableLeft="@drawable/password"
+                android:drawablePadding="20dp"/>
+
         </TableRow>
         <TableRow>
             <Spinner
@@ -76,7 +65,8 @@
                 android:text="Edit"
                 android:id="@+id/btnEdit"
                 android:background="@drawable/button"
-                android:paddingRight="26dp"/>
+                android:textColor="@drawable/text_button"
+                android:layout_margin="10dp"/>
 
             <Button
                 android:layout_width="match_parent"
@@ -85,7 +75,8 @@
                 android:text="Save"
                 android:id="@+id/btnSave"
                 android:background="@drawable/button"
-                android:paddingLeft="16dp"/>
+                android:textColor="@drawable/text_button"
+                android:layout_margin="10dp"/>
 
         </TableRow>
     </TableLayout>
