--- a/app/src/main/res/layout/fragment_translate.xml
+++ b/app/src/main/res/layout/fragment_translate.xml
@@ -9,8 +9,11 @@
     <TableRow>
         <ImageView
             android:layout_height="180dp"
+            android:layout_weight="2"
+            android:src="@drawable/email"
             android:layout_width="match_parent"
             android:layout_gravity="center"
+            android:id="@+id/ivThumbnail"
             />
     </TableRow>
     <TableRow>
